--- a/sass/main.scss
+++ b/sass/main.scss
@@ -79,4 +79,35 @@ body {
 			transform: translatey(2px);
 		}
 	}
+
+	/* DASHBOARD OVERVIEW */
+	.section-dashboard-overview {
+		@apply h-[530px] flex items-center justify-center;
+		transform: skewy(7deg);
+		background: linear-gradient(to right bottom, #87cefa, #2a0896);
+		background-size: 400% 400%;
+		animation: gradient 15s ease infinite;
+	}
+
+	.section-dashboard-overview > * {
+		transform: skewy(-7deg);
+	}
+
+	.dashboard-img {
+		background-color: red;
+		width: calc(100% - 40%);
+		height: 100%;
+	}
+
+	@keyframes gradient {
+		0% {
+			background-position: 0% 50%;
+		}
+		50% {
+			background-position: 100% 50%;
+		}
+		100% {
+			background-position: 0% 50%;
+		}
+	}
 }
