--- a/sass/main.scss
+++ b/sass/main.scss
@@ -94,9 +94,10 @@ body {
 	}
 
 	.dashboard-img {
-		background-color: red;
-		width: calc(100% - 40%);
+		width: calc(100% - 20%);
+		border: 1px solid red;
 		height: 100%;
+		background: url(/assets/dashboard-preview.png) no-repeat center center/cover;
 	}
 
 	@keyframes gradient {
