--- a/sass/main.scss
+++ b/sass/main.scss
@@ -138,12 +138,41 @@ body {
 	.about-content {
 		@apply flex flex-col gap-4 mb-16 ml-8;
 
-		h2 {
+		h3 {
 			font-size: 32px !important;
 		}
 		p {
 			font-size: 22px;
 			color: rgba(40, 40, 40, 0.7);
+		}
+	}
+
+	/* SECTION COLLAB-OVERVIEW */
+	.section-collab-overview {
+	}
+
+	.collab {
+		width: calc(100% - 20%);
+		@apply flex items-center  bg-color-neutral-1 h-[500px] my-0 mx-auto px-10 rounded-3xl;
+
+		.collab__content {
+			@apply basis-1/2;
+
+			h2 {
+				font-size: 40px !important;
+				line-height: 1.2;
+				font-weight: 500 !important;
+				margin-bottom: 1rem !important;
+			}
+
+			p {
+				@apply text-base w-9/12;
+				color: rgba(40, 40, 40, 0.7);
+			}
+		}
+
+		.collab__image {
+			@apply basis-1/2;
 		}
 	}
 }
